--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ repositories {
 
 dependencies {
     // https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.41.0'
+    // 2.41.0
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.7.2'
     // https://mvnrepository.com/artifact/org.testng/testng
     testImplementation group: 'org.testng', name: 'testng', version: '6.14.3'
     // https://mvnrepository.com/artifact/io.rest-assured/rest-assured
@@ -29,5 +30,5 @@ test {
     useTestNG()
     // This is for ./gradlew cleanTest test
     // TODO: run in command line
-    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+    //maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
 }
