--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,4 +12,4 @@ jobs:
           distribution: 'adopt'
           cache: gradle
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew :test --tests "webTestSuites.InvoiceCloudTestSuite"
