--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 
 test {
     useTestNG{
+        suites 'dockerAllTestsng.xml'
     }
 
     // This is for ./gradlew cleanTest test
