--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,17 @@ dependencies {
 }
 
 test {
+    // command line: ./gradlew cleanTest test
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1\
+    // with no suites runs perfectly
+    // with xml; runs 5 times?
     useTestNG{
-        suites 'allTests.xml'
     }
 
-    // This is for ./gradlew cleanTest test
-    // TODO: run in command line
-    //maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+    testLogging {
+        exceptionFormat "full"
+        events "started", "skipped", "passed", "failed"
+        //showStandardStreams true // shows all logging, in parallel this is a mess
+    }
+
 }
