Runs JenkinsFile on Jenkins
Pipeline runs docker, tests, and shuts down docker. Deleted files and code that are no longer used

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,7 +7,7 @@ pipeline {
                 bat 'docker compose -f SetupSeleniumGridJenkins.yml up -d'
              }
         }
-        stage('Gradle Build') {
+        stage('Run Tests') {
             steps {
                 bat './gradlew cleanTest test'
             }
