--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,6 +2,11 @@ pipeline {
     agent any
 
     stages {
+        stage('Remove docker container') {
+            steps {
+                bat 'docker rm -f selenium-hub'
+            }
+        }
         stage('Start up Selenium Grid') {
              steps {
                 bat 'docker compose -f SetupSeleniumGridJenkins.yml up -d'
