Sleep during docker set up
Allow Selenium grid to be set up before running tests

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,6 +5,7 @@ pipeline {
         stage('Start up Selenium Grid') {
              steps {
                 bat 'docker compose -f SetupSeleniumGridJenkins.yml up -d'
+                sleep(time: 20, unit: "SECONDS")
              }
         }
         stage('Run Tests') {
