--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
 }
 
 test {
-    // run in command line: ./gradlew cleanTest test
+    // command line: ./gradlew cleanTest test
     maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1\
     useTestNG{
     }
