--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ dependencies {
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
     // https://github.com/bonigarcia/webdrivermanager
     implementation 'io.github.bonigarcia:webdrivermanager:5.3.2'
+
+    // added only for to not have warning appear: https://www.slf4j.org/codes.html#ignoredBindings
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.7'
+
 }
 
 test {
