Listeners in build.gradle, GetExtentReport() method
Listener classes in build.gradle instead each test class; eliminates need to add listener to each test class. Added FlushExtentReport() and GetExtentReport() to be used by all listener classes

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,11 @@ dependencies {
 test {
     // run in command line: ./gradlew cleanTest test
     maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+    // https://docs.gradle.org/current/userguide/java_testing.html#sec:debugging_java_tests
+    // TODO: try 'Debugging when running tests' to get ExtentReport to work
     useTestNG{
+        listeners << 'listeners.BaseInvokedMethodListener'
+        listeners << 'listeners.BaseTestListener'
     }
 
     testLogging {
