--- a/build.gradle
+++ b/build.gradle
@@ -34,17 +34,19 @@ dependencies {
 
 test {
     // run in command line: ./gradlew cleanTest test
-    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+    //maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
     // https://docs.gradle.org/current/userguide/java_testing.html#sec:debugging_java_tests
     // TODO: try 'Debugging when running tests' to get ExtentReport to work
     useTestNG{
         listeners << 'listeners.BaseInvokedMethodListener'
         listeners << 'listeners.BaseTestListener'
+
+        suites "testng.xml"
     }
 
-    testLogging {
+    /*testLogging {
         exceptionFormat "full"
         events "started", "skipped", "passed", "failed"
-    }
+    }*/
 
 }
